# open-data-product-berlin-electoral-districts-geodata

./: README.md  data-product-manifest.yml  data-transformation.yml  main.py  odps.yml  pyproject.toml
data/02-silver/berlin-electoral-districts-european-election-2014/: berlin-electoral-districts-european-election-2014.geojson
data/03-gold/berlin-electoral-districts-styles/: berlin-electoral-districts-centroid-symbol-theme-dark.json  berlin-electoral-districts-centroid-symbol-theme-light.json  berlin-electoral-districts-fill-marked.json  berlin-electoral-districts-fill.json  berlin-electoral-districts-line-highlighted.json  berlin-electoral-districts-line.json
docs/: data-product-canvas.md  odps-canvas.md
lib/config/: data_transformation_loader.py
lib/transform/: data_bounding_box_converter.py  data_geojson_converter.py  data_geometry_converter.py  data_projection_converter.py  data_property_converter.py
