[project]
name = "berlin-electoral-districts-geodata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "dacite==1.8.1",
    "geopandas>=1.0.1",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "tqdm>=4.67.1",
]
